--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngx-image-cropper": "^6.1.0",
     "node-modules": "^0.0.1",
     "rxjs": "~7.4.0",
+    "source-map-resolve": "^0.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
